--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <h3> ფაილები </h3>
         </div>
       </a>
-      <a href="instruction.html">
+      <a href="sps-files.html">
         <div class="cat-1 cat-3">
-          <img class="cat-img" src="images/video.jpg" alt="img">
-          <h3> ინსტრუქცია </h3>
+          <img class="cat-img" src="images/sps.jpg" alt="img">
+          <h3>  sps ფაილები </h3>
         </div>
       </a>
     </div>
