--- a/printers.html
+++ b/printers.html
@@ -16,6 +16,12 @@
 <body class="index-body">
   <header class="index-header">
     <div class="header-box">
+      <a href="index.html">
+        <div class="cat-1">
+          <img class="cat-img" src="images/home.png" alt="img">
+          <h3>პროგრამები</h3>
+        </div>
+      </a>
       <a href="programs.html">
         <div class="cat-1">
           <img class="cat-img" src="images/programs.jpg" alt="img">
@@ -28,44 +34,58 @@
           <h3>პრინტერები</h3>
         </div>
       </a>
-      <a href="programs.html">
+      <a href="iso.html">
         <div class="cat-1">
           <img class="cat-img" src="images/iso.png" alt="img">
           <h3>ფაილები</h3>
         </div>
       </a>
-      <a href="instruction.html">
+      <a href="sps-files.html">
         <div class="cat-1 cat-3">
-          <img class="cat-img" src="images/video.jpg" alt="img">
-          <h3> ინსტრუქციები </h3>
+          <img class="cat-img" src="images/sps.jpg" alt="img">
+          <h3>  sps ფაილები </h3>
         </div>
       </a>
     </div>
     <input class="search" type="text" id="searchInput" placeholder="   ძებნა...">
   </header>
 
-  <main id="results">
-    <!-- კატეგორია 1 -->
-    <section class="category" id="cat1">
-      <h2>კატეგორია 1</h2>
-      <div class="file-list">
-        <div class="file-item" data-title="დოკუმენტი ა" data-description="პირველი დოკუმენტი">
-          <img src="images/logo1.png" alt="Logo">
-          <p class="title">დოკუმენტი ა</p>
-          <p class="description">პირველი დოკუმენტი</p>
-          <a href="files/doc1.pdf" download>გადმოწერა</a>
-        </div>
-
-        <div class="file-item" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
-          <img src="images/logo1.png" alt="Logo">
-          <p class="title">დოკუმენტი ბ</p>
-          <p class="description">მეორე დოკუმენტი</p>
-          <a href="files/doc2.pdf" download>გადმოწერა</a>
-        </div>
+  <main class="programs-box" id="results">
+    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+      <div class="file-box1">
+        <p class="title"> ლოგო </p>
       </div>
-    </section>
+      <div class="file-box2">
+        <p class="title"> ფაილის დასახელება </p>
+      </div>
+      <div class="file-box3">
+        <p class="title"> ფაილის ვერსია </p>
+      </div>
+    </div>
 
-    <!-- სხვა კატეგორიების სტრუქტურა იგივეა -->
+    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+      <div class="file-box1">
+        <img class="file-img" src="images/chrome.png" alt="logo">
+      </div>
+      <div class="file-box2">
+        <p class="title"> Google Chrome </p>
+      </div>
+      <div class="file-box3">
+        <p class="title"> ფაილის ვერსია </p>
+      </div>
+    </div>
+
+    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+      <div class="file-box1">
+        <img class="file-img" src="images/Firefox.png" alt="logo">
+      </div>
+      <div class="file-box2">
+        <p class="title"> Mozila Firefox </p>
+      </div>
+      <div class="file-box3">
+        <p class="title"> ფაილის ვერსია </p>
+      </div>
+    </div>
   </main>
 
   <script src="script.js"></script>
