--- a/programs.html
+++ b/programs.html
@@ -40,10 +40,10 @@
           <h3>ფაილები</h3>
         </div>
       </a>
-      <a href="instruction.html">
+      <a href="sps-files.html">
         <div class="cat-1 cat-3">
-          <img class="cat-img" src="images/video.jpg" alt="img">
-          <h3> ინსტრუქციები </h3>
+          <img class="cat-img" src="images/sps.jpg" alt="img">
+          <h3> sps ფაილები </h3>
         </div>
       </a>
     </div>
@@ -51,18 +51,40 @@
   </header>
 
   <main class="programs-box" id="results">
-    <div class="file-item" data-title="დოკუმენტი ა" data-description="პირველი დოკუმენტი">
-      <img src="images/logo1.png" alt="Logo">
-      <p class="title">დოკუმენტი ა</p>
-      <p class="description">პირველი დოკუმენტი</p>
-      <a href="files/doc1.pdf" download>გადმოწერა</a>
+    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+      <div class="file-box1">
+        <p class="title"> ლოგო </p>
+      </div>
+      <div class="file-box2">
+        <p class="title"> ფაილის დასახელება </p>
+      </div>
+      <div class="file-box3">
+        <p class="title"> ფაილის ვერსია </p>
+      </div>
     </div>
 
-    <div class="file-item" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
-      <img src="images/logo1.png" alt="Logo">
-      <p class="title">დოკუმენტი ბ</p>
-      <p class="description">მეორე დოკუმენტი</p>
-      <a href="files/doc2.pdf" download>გადმოწერა</a>
+    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+      <div class="file-box1">
+        <img class="file-img" src="images/chrome.png" alt="logo">
+      </div>
+      <div class="file-box2">
+        <p class="title"> Google Chrome </p>
+      </div>
+      <div class="file-box3">
+        <p class="title"> ფაილის ვერსია </p>
+      </div>
+    </div>
+
+    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+      <div class="file-box1">
+        <img class="file-img" src="images/Firefox.png" alt="logo">
+      </div>
+      <div class="file-box2">
+        <p class="title"> Mozila Firefox </p>
+      </div>
+      <div class="file-box3">
+        <p class="title"> ფაილის ვერსია </p>
+      </div>
     </div>
   </main>
 
