--- a/programs.html
+++ b/programs.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <title> SPS Programs </title>
     </head>
-<body class="index-body">
+<body class="body">
   <header class="index-header">
     <div class="header-box">
       <a href="index.html">
@@ -71,7 +71,10 @@
         <p class="title"> Google Chrome </p>
       </div>
       <div class="file-box3">
-        <p class="title"> ფაილის ვერსია </p>
+        <button> 64 bit </button>
+        <button> 32 bit </button>
+        <button> v69.0 (64) offline </button>
+        <button> v69.0 (32) offline </button>
       </div>
     </div>
 
@@ -83,7 +86,10 @@
         <p class="title"> Mozila Firefox </p>
       </div>
       <div class="file-box3">
-        <p class="title"> ფაილის ვერსია </p>
+        <button> 64 bit </button>
+        <button> 32 bit </button>
+        <button> v69.0 (64) offline </button>
+        <button> v69.0 (32) offline </button>
       </div>
     </div>
   </main>
