--- a/printers.html
+++ b/printers.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <title> SPS Programs </title>
     </head>
-<body class="index-body">
+<body class="body">
   <header class="index-header">
     <div class="header-box">
       <a href="index.html">
