--- a/programs.html
+++ b/programs.html
@@ -71,10 +71,18 @@
         <p class="title"> Google Chrome </p>
       </div>
       <div class="file-box3">
-        <button> 64 bit </button>
-        <button> 32 bit </button>
-        <button> v69.0 (64) offline </button>
-        <button> v69.0 (32) offline </button>
+        <a href="all-programs/programs/Chrome-x64.exe">
+          <button> 64 bit </button>
+        </a>
+        <a href="all-programs/programs/Chrome-x32.exe">
+          <button> 32 bit </button>
+        </a>
+        <a href="all-programs/programs/Chrome-x64-offline.exe">
+          <button> v69.0 (64) offline </button>
+        </a>
+        <a href="all-programs/programs/Chrome-x32-offline.exe">
+          <button> v69.0 (32) offline </button>
+        </a>
       </div>
     </div>
 
@@ -86,10 +94,18 @@
         <p class="title"> Mozila Firefox </p>
       </div>
       <div class="file-box3">
-        <button> 64 bit </button>
-        <button> 32 bit </button>
-        <button> v69.0 (64) offline </button>
-        <button> v69.0 (32) offline </button>
+        <a href="all-programs/programs/Firefox-x64.exe" download>
+          <button> 64 bit </button>
+        </a>
+        <a href="all-programs/programs/Firefox-x32.exe" download>
+          <button> 32 bit </button>
+        </a>
+        <a href="all-programs/programs/Firefox-69-x64-offline.exe" download>
+          <button> v69.0 (64) offline </button>
+        </a>
+        <a href="all-programs/programs/Firefox-69-x32-offline.exe" download>
+          <button> v69.0 (32) offline </button>
+        </a>
       </div>
     </div>
   </main>
