--- a/programs.html
+++ b/programs.html
@@ -51,7 +51,7 @@
   </header>
 
   <main class="programs-box" id="results">
-    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+    <div class="file-box">
       <div class="file-box1">
         <p class="title"> ლოგო </p>
       </div>
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+    <div class="file-box">
       <div class="file-box1">
         <img class="file-img" src="images/chrome.png" alt="logo">
       </div>
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+    <div class="file-box">
       <div class="file-box1">
         <img class="file-img" src="images/Firefox.png" alt="logo">
       </div>
