--- a/programs.html
+++ b/programs.html
@@ -65,7 +65,7 @@
 
     <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="images/chrome.png" alt="logo">
+        <img class="file-img" src="all-programs/programs/images/chrome.png" alt="logo">
       </div>
       <div class="file-box2">
         <p class="title"> Google Chrome </p>
@@ -88,7 +88,7 @@
 
     <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="images/Firefox.png" alt="logo">
+        <img class="file-img" src="all-programs/programs/images/Firefox.png" alt="logo">
       </div>
       <div class="file-box2">
         <p class="title"> Mozila Firefox </p>
