--- a/printers.html
+++ b/printers.html
@@ -56,17 +56,14 @@
     <a href="#" data-target="canon-box">
       <img class="print-img" src="all-programs/printers/images/canon.jpg" alt="img">
     </a>
-    <a href="#" data-target="kiosera-box">
-      <img class="print-img" src="all-programs/printers/images/kiosera.jpg" alt="img">
+    <a href="#" data-target="kyosera-box">
+      <img class="print-img" src="all-programs/printers/images/kyosera.jpg" alt="img">
     </a>
     <a href="#" data-target="samsung-box">
       <img class="print-img" src="all-programs/printers/images/samsung.jpeg" alt="img">
     </a>
     <a href="#" data-target="epson-box">
       <img class="print-img" src="all-programs/printers/images/epson.png" alt="img">
-    </a>
-    <a href="#" data-target="xerox-box">
-      <img class="print-img" src="all-programs/printers/images/xerox.png" alt="img">
     </a>
     <a href="#" data-target="others-box">
       <img class="print-img" src="all-programs/printers/images/others.png" alt="img">
@@ -92,7 +89,7 @@
           <img class="file-img" src="all-programs/printers/images/hp.jpg" alt="logo">
         </div>
         <div class="driver-box2">
-          <p class="title"> Laserjet M428-M429 </p>
+          <p class="title"> HP Laserjet M428-M429 </p>
         </div>
         <div class="driver-box3">
           <a href="all-programs/printers/hp-printers/LJM428-M429_Full_WebPack_48.4.4588.exe">
@@ -105,7 +102,7 @@
           <img class="file-img" src="all-programs/printers/images/hp.jpg" alt="logo">
         </div>
         <div class="driver-box2">
-          <p class="title"> Laserjet M129-M134 </p>
+          <p class="title"> HP Laserjet M129-M134 </p>
         </div>
         <div class="driver-box3">
           <a href="all-programs/printers/hp-printers/LJM129-M134_UWWL_4-1_UW_4_1_Full_WebPack_44.3.2667.exe">
@@ -119,10 +116,27 @@
      <div class="canon-box">
       <div class="driver-box">
         <div class="driver-box1">
-          <img class="file-img" src="all-programs/printers/images/hp.jpg" alt="logo">
+          <img class="file-img" src="all-programs/printers/images/canon.jpg" alt="logo">
         </div>
         <div class="driver-box2">
-          <p class="title"> MF4450_4430_4410 </p>
+          <p class="title"> Tools </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/canon-printers/ToolBox_4911mf18_Win_EN.exe">
+            <button> ToolBox 4911 </button>
+          </a>
+          <a href="all-programs/printers/canon-printers/NetworkUSBScanPatchEN.exe">
+            <button> Network USB Scan Patch </button>
+          </a>
+        </div>
+      </div>
+
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/canon.jpg" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> Canon MF4450_4430_4410 </p>
         </div>
         <div class="driver-box3">
           <a href="all-programs/printers/canon-printers/MF4450_4430_4410_MFDrivers_W64_uk_EN.exe">
@@ -135,17 +149,156 @@
       </div>
       <div class="driver-box">
         <div class="driver-box1">
-          <img class="file-img" src="all-programs/printers/images/hp.jpg" alt="logo">
+          <img class="file-img" src="all-programs/printers/images/canon.jpg" alt="logo">
         </div>
         <div class="driver-box2">
-          <p class="title"> Laserjet M129-M134 </p>
+          <p class="title"> Canon MF4700 </p>
         </div>
         <div class="driver-box3">
-          <a href="all-programs/printers/hp-printers/LJM129-M134_UWWL_4-1_UW_4_1_Full_WebPack_44.3.2667.exe">
+          <a href="all-programs/printers/canon-printers/MF4700_Series_MFDrivers_W64_uk_EN_2.rar">
             <button> 64 bit </button>
+          </a>
+          <a href="all-programs/printers/canon-printers/MF4700MFDriversV2090W-32-kEN.exe">
+            <button> 32 bit </button>
           </a>
         </div>
       </div>
+    </div>
+
+    <!-- kyocera Printers -->
+    <div class="kyosera-box">
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/kyosera.jpg" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> Kyosera </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/kyosera-printers/Kiosera.rar">
+            <button> 64 bit </button>
+          </a>
+        </div>
+      </div>      
+    </div>
+
+    <!-- samsung Printers -->
+    <div class="samsung-box">
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/samsung.jpeg" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> tools </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/samsung-printers/ScanAssistant_1.05.07.exe">
+            <button> ScanAssistant </button>
+          </a>
+          <a href="all-programs/printers/samsung-printers/Easy-Documen-Creator_V2.02.59.exe">
+            <button> Easy Document Creator </button>
+          </a>
+        </div>        
+      </div> 
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/samsung.jpeg" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> samsung M267x_287x </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/samsung-printers/M267x_287x_Series_WIN_Scanner_V3.31.19.04_CDV1.43.exe">
+            <button> 64 bit </button>
+          </a>
+        </div>        
+      </div>      
+    </div>
+
+    <!-- epson Printers -->
+    <div class="epson-box">
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/epson.png" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> tools </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/epson-rinters/vuex6496.exe">
+            <button> Wue Scan </button>
+          </a>
+        </div>
+      </div>   
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/epson.png" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> Epson DS510 </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/epson-rinters/Epson DS510.exe">
+            <button> 64 bit </button>
+          </a>
+        </div>
+      </div> 
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/epson.png" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> Epson DS530 EScan2 </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/epson-rinters/DS530_EScan2_65220_AM.exe">
+            <button> 64 bit </button>
+          </a>
+        </div>
+      </div>   
+    </div>
+
+    <!-- other Printers -->
+    <div class="others-box">
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/printer-icon.jpg" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> Phaser 3117 </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/xerox-printers/Phaser_3117_W7.zip">
+            <button> 64 bit </button>
+          </a>
+        </div>
+      </div> 
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/printer-icon.jpg" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> Xerox 3100 </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/xerox-printers/XEROX 3100.rar">
+            <button> 64 bit </button>
+          </a>
+        </div>
+      </div> 
+      <div class="driver-box">
+        <div class="driver-box1">
+          <img class="file-img" src="all-programs/printers/images/printer-icon.jpg" alt="logo">
+        </div>
+        <div class="driver-box2">
+          <p class="title"> Lexmark MS811 </p>
+        </div>
+        <div class="driver-box3">
+          <a href="all-programs/printers/other-printers/Lexmark MS811dn.exe">
+            <button> 64 bit </button>
+          </a>
+        </div>
+      </div> 
     </div>
 
   </main>
