--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <input class="search" type="text" id="searchInput" placeholder="   ძებნა...">
   </header>
 
-  <main class="main-box" id="results">
+  <main class="main-box" id="search-results">
     
   </main>
 
