--- a/programs.html
+++ b/programs.html
@@ -19,7 +19,7 @@
       <a href="index.html">
         <div class="cat-1">
           <img class="cat-img" src="images/home.png" alt="img">
-          <h3>პროგრამები</h3>
+          <h3>მთავარი</h3>
         </div>
       </a>
       <a href="programs.html">
@@ -47,16 +47,19 @@
         </div>
       </a>
     </div>
-    <input class="search" type="text" id="searchInput" placeholder="   ძებნა...">
+    <a href="index.html">
+      <button> ძებნა მთავარ გვერძე </button>
+    </a>
   </header>
 
   <main class="programs-box" id="results">
-    <div class="file-box">
+    <div class="file-box sort-bar">
       <div class="file-box1">
         <p class="title"> ლოგო </p>
       </div>
       <div class="file-box2">
-        <p class="title"> ფაილის დასახელება </p>
+        <p class="title sort-p"> ფაილის დასახელება </p>
+        <button id="sortBtn">ა-ჰ</button>
       </div>
       <div class="file-box3">
         <p class="title"> ფაილის ვერსია </p>
