--- a/sps-files.html
+++ b/sps-files.html
@@ -19,7 +19,7 @@
       <a href="index.html">
         <div class="cat-1">
           <img class="cat-img" src="images/home.png" alt="img">
-          <h3>პროგრამები</h3>
+          <h3>მთავარი</h3>
         </div>
       </a>
       <a href="programs.html">
@@ -43,47 +43,60 @@
       <a href="sps-files.html">
         <div class="cat-1 cat-3">
           <img class="cat-img" src="images/sps.jpg" alt="img">
-          <h3>  sps ფაილები </h3>
+          <h3> sps ფაილები </h3>
         </div>
       </a>
     </div>
-    <input class="search" type="text" id="searchInput" placeholder="   ძებნა...">
+    <a href="index.html">
+      <button> ძებნა მთავარ გვერძე </button>
+    </a>
   </header>
 
   <main class="programs-box" id="results">
-    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+    <div class="file-box sort-bar">
       <div class="file-box1">
         <p class="title"> ლოგო </p>
       </div>
       <div class="file-box2">
-        <p class="title"> ფაილის დასახელება </p>
+        <p class="title sort-p"> ფაილის დასახელება </p>        
+        <button id="sortBtn">ა-ჰ</button>
       </div>
       <div class="file-box3">
         <p class="title"> ფაილის ვერსია </p>
       </div>
     </div>
 
-    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+    <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="images/chrome.png" alt="logo">
+        <img class="file-img" src="all-programs/SPS programs/images/fonts.png" alt="logo">
       </div>
       <div class="file-box2">
-        <p class="title"> Google Chrome </p>
+        <p class="title"> font </p>
       </div>
       <div class="file-box3">
-        <p class="title"> ფაილის ვერსია </p>
+        <a href="all-programs/SPS programs/font-sps.rar">
+          <button> sps </button>
+        </a>
+        <a href="all-programs/SPS programs/font-შესაგებელი.rar">
+          <button> შესაგებელი </button>
+        </a>
       </div>
     </div>
 
-    <div class="file-box" data-title="დოკუმენტი ბ" data-description="მეორე დოკუმენტი">
+    <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="images/Firefox.png" alt="logo">
+        <img class="file-img" src="all-programs/SPS programs/images/oris.jpg" alt="logo">
       </div>
       <div class="file-box2">
-        <p class="title"> Mozila Firefox </p>
+        <p class="title"> Oris </p>
       </div>
       <div class="file-box3">
-        <p class="title"> ფაილის ვერსია </p>
+        <a href="all-programs/SPS programs/Oris install.rar" download>
+          <button> Oris install </button>
+        </a>
+        <a href="all-programs/SPS programs/Oris remote.rar" download>
+          <button> Oris RDP </button>
+        </a>
       </div>
     </div>
   </main>
