--- a/sps-files.html
+++ b/sps-files.html
@@ -48,7 +48,7 @@
       </a>
     </div>
     <a href="index.html">
-      <button> ძებნა მთავარ გვერძე </button>
+      <button> ძებნა მთავარ გვერდზე </button>
     </a>
   </header>
 
