--- a/instruction.html
+++ b/instruction.html
@@ -64,7 +64,7 @@
         <p class="title"> ლოგო </p>
       </div>
       <div class="file-box2">
-        <p class="title sort-p"> ფაილის დასახელება </p>        
+        <p class="title sort-p"> ფაილის დასახელება </p>       
         <button id="sortBtn">ა-ჰ</button>
       </div>
       <div class="file-box3">
@@ -74,34 +74,28 @@
 
     <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="all-programs/SPS programs/images/fonts.png" alt="logo">
+        <img class="file-img" src="all-programs/iso-files/images/iso.png" alt="logo">
       </div>
       <div class="file-box2">
-        <p class="title"> font </p>
+        <p class="title"> aaaaaaaaaaa </p>
       </div>
       <div class="file-box3">
-        <a href="all-programs/SPS programs/font-sps.rar">
-          <button> sps </button>
-        </a>
-        <a href="all-programs/SPS programs/font-შესაგებელი.rar">
-          <button> შესაგებელი </button>
+        <a href="all-programs/iso-files/BootPass.iso">
+          <button> BootPass </button>
         </a>
       </div>
     </div>
 
     <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="all-programs/SPS programs/images/oris.jpg" alt="logo">
+        <img class="file-img" src="all-programs/iso-files/images/iso.png" alt="logo">
       </div>
       <div class="file-box2">
-        <p class="title"> Oris </p>
+        <p class="title"> bbbbbbbbbbb </p>
       </div>
       <div class="file-box3">
-        <a href="all-programs/SPS programs/Oris install.rar" download>
-          <button> Oris install </button>
-        </a>
-        <a href="all-programs/SPS programs/Oris remote.rar" download>
-          <button> Oris RDP </button>
+        <a href="all-programs/iso-files/Acronis.True.Image.2019.Build.17750.iso" download>
+          <button> 2019 Build.17750 </button>
         </a>
       </div>
     </div>
