--- a/printers.html
+++ b/printers.html
@@ -46,6 +46,12 @@
           <h3>  sps ფაილები </h3>
         </div>
       </a>
+      <a href="instruction.html">
+        <div class="cat-1 cat-3">
+          <img class="cat-img" src="images/instruction.png" alt="img">
+          <h3>  ინსტრუქციები </h3>
+        </div>
+      </a>
     </div>
     <a href="index.html">
       <button> ძებნა მთავარ გვერდზე </button>
