--- a/iso.html
+++ b/iso.html
@@ -46,6 +46,12 @@
           <h3> sps ფაილები </h3>
         </div>
       </a>
+      <a href="instruction.html">
+        <div class="cat-1 cat-3">
+          <img class="cat-img" src="images/instruction.png" alt="img">
+          <h3>  ინსტრუქციები </h3>
+        </div>
+      </a>
     </div>
     <a href="index.html">
       <button> ძებნა მთავარ გვერდზე </button>
@@ -68,7 +74,7 @@
 
     <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="images/iso.png" alt="logo">
+        <img class="file-img" src="all-programs/iso-files/images/iso.png" alt="logo">
       </div>
       <div class="file-box2">
         <p class="title"> BootPass </p>
@@ -82,7 +88,7 @@
 
     <div class="file-box">
       <div class="file-box1">
-        <img class="file-img" src="images/iso.png" alt="logo">
+        <img class="file-img" src="all-programs/iso-files/images/iso.png" alt="logo">
       </div>
       <div class="file-box2">
         <p class="title"> Acronis True Image </p>
