--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <input class="search" type="text" id="searchInput" placeholder="   ძებნა...">
   </header>
 
-  <main class="main-box" id="search-results">
+  <main class="main-box" id="favorite-box">
     
   </main>
 
