--- a/instruction.html
+++ b/instruction.html
@@ -58,47 +58,18 @@
     </a>
   </header>
 
-  <main class="programs-box" id="results">
-    <div class="file-box sort-bar">
-      <div class="file-box1">
-        <p class="title"> ლოგო </p>
+  <main class="instruction" id="results">
+    <div class="instruction-box">
+      <div class="instruction-file">
       </div>
-      <div class="file-box2">
-        <p class="title sort-p"> ფაილის დასახელება </p>       
-        <button id="sortBtn">ა-ჰ</button>
-      </div>
-      <div class="file-box3">
-        <p class="title"> ფაილის ვერსია </p>
-      </div>
+        <p class="instruction-title"> მეილის დამატება მობილურ ტელეფონში </p>
     </div>
-
-    <div class="file-box">
-      <div class="file-box1">
-        <img class="file-img" src="all-programs/iso-files/images/iso.png" alt="logo">
+    <div class="instruction-box">
+      <div class="instruction-file">
       </div>
-      <div class="file-box2">
-        <p class="title"> aaaaaaaaaaa </p>
-      </div>
-      <div class="file-box3">
-        <a href="all-programs/iso-files/BootPass.iso">
-          <button> BootPass </button>
-        </a>
-      </div>
+        <p class="instruction-title"> bbbbbbbbbbb </p>
     </div>
-
-    <div class="file-box">
-      <div class="file-box1">
-        <img class="file-img" src="all-programs/iso-files/images/iso.png" alt="logo">
-      </div>
-      <div class="file-box2">
-        <p class="title"> bbbbbbbbbbb </p>
-      </div>
-      <div class="file-box3">
-        <a href="all-programs/iso-files/Acronis.True.Image.2019.Build.17750.iso" download>
-          <button> 2019 Build.17750 </button>
-        </a>
-      </div>
-    </div>
+    
   </main>
 
   <script src="js/script.js"></script>
