--- a/instruction.html
+++ b/instruction.html
@@ -67,7 +67,7 @@
     <div class="instruction-box">
       <div class="instruction-file">
       </div>
-        <p class="instruction-title"> bbbbbbbbbbb </p>
+        <p class="instruction-title"> მეილის დამატება მობილურ ტელეფონში </p>
     </div>
     
   </main>
